crates/nx-syntax/tests/fixtures/valid/component-external-state.nx
external component <SearchBox placeholder:string /> = {
  state {
    query:string
  }
}
