crates/nx-syntax/tests/fixtures/invalid/component-external-duplicate-state.nx
external component <SearchBox /> = {
  state { query:string }
  state { theme:string }
}
